--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
         if: github.ref_type == 'tag'
         run: |
           python gui/version.py --write gui/_build_version.py
+          GIT_VERSION="${GITHUB_REF_NAME//./-}"
+          echo "GIT_VERSION=$GIT_VERSION" >> "$GITHUB_ENV"
+          echo "Computed Git version=$GIT_VERSION"
         shell: bash
 
       - name: Build (Linux)
@@ -46,20 +49,20 @@ jobs:
         run: |
           python -m PyInstaller --noconfirm --clean --windowed --onefile --name botany-guide-gui --add-data "gui:gui" gui/gui.py
           cd dist
-          zip -9 botany-guide-gui_linux_${{ github.ref_name }}.zip botany-guide-gui
+          zip -9 botany-guide-gui_linux_${{ env.GIT_VERSION }}.zip botany-guide-gui
         shell: bash
 
       - name: Build (Windows)
         if: runner.os == 'Windows'
         run: |
           python -m PyInstaller --noconfirm --clean --windowed --onefile --name botany-guide-gui --add-data "gui;gui" gui/gui.py
-          Compress-Archive -Path dist\botany-guide-gui.exe -DestinationPath dist\botany-guide-gui_windows_${{ github.ref_name }}.zip
+          Compress-Archive -Path dist\botany-guide-gui.exe -DestinationPath dist\botany-guide-gui_windows_${{ env.GIT_VERSION }}.zip
         shell: pwsh
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: botany-guide-gui-${{ github.ref_name }}-${{ matrix.artifact_os }}
+          name: botany-guide-gui_${{ matrix.artifact_os }}_${{ env.GIT_VERSION }}
           path: ${{github.workspace}}/dist/*.zip
           retention-days: 1
 
